Revision history for Server-Control

** denotes an incompatible change

0.02  Aug 21, 2009

- Parse Apache config to determine server_root, port, bind_addr, error_log, and pid_file if not specified

0.01  Aug 21, 2009

- Initial version
